# SLAY

./: .gitignore  CMakeLists.txt  README.md
CSR/: CSR.cpp  CSR.hpp
ThomasAlg/: CMakeLists.txt  ThomasAlg.hpp  test.cc
src/: CMakeLists.txt
src/CSR/: CSR.cpp  CSR.hpp
src/ChebAccel/: ChebAccel.cpp  ChebAccel.hpp
src/GMRES/: GMRES.cpp  GMRES.hpp
src/GradientDescent/: GradientDescent.cpp  GradientDescent.hpp
src/Iter/: Iter.cpp  Iter.hpp
src/Matrix/: Matrix.cpp  Matrix.hpp
src/QR/: QR.cpp  QR.hpp
src/ThomasAlg/: ThomasAlg.cpp  ThomasAlg.hpp
tests/: CMakeLists.txt  test_CSR.cpp  test_ChebAccel.cpp  test_GradientDescent.cpp  test_Iter.cpp  test_Matrix.cpp  test_QR.cpp  test_Thomas.cpp
